--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👏</text></svg>"
-    />
+    <link rel="icon" type="image/png" href="/dist/facicon.png" />
     <link href="/dist/style.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&amp;display=swap"
+      rel="stylesheet"
+    />
     <script>
       (function () {
         function toggleDarkMode(isDark) {
@@ -29,7 +29,20 @@
     </script>
     <title>Welcome ~</title>
   </head>
-  <body class="bg-white text-slate-900 dark:bg-black dark:text-white">
-    <p class="p-4 font-mono text-lg">Coming soon...</p>
+  <body class=" font-[Nunito] h-screen bg-white text-slate-900 dark:bg-black dark:text-white">
+    <div class="fixed left-4 top-4">
+      <img
+        class="h-12 w-12 rounded-xl object-cover"
+        src="/dist/facicon.jpg"
+        alt="TBC Zhao"
+      />
+      <div
+        class="absolute inset-0 rounded-xl ring-1 ring-inset ring-black/20 dark:ring-white/80"
+      ></div>
+    </div>
+
+    <div class="flex h-full items-center justify-center">
+      <p class="p-4 text-lg">Coming soon...</p>
+    </div>
   </body>
 </html>
