--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/dist/facicon.png" />
+    <link rel="icon" type="image/png" href="/dist/favicon.png" />
     <link href="/dist/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&amp;display=swap"
