--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
     </script>
     <title>Welcome ~</title>
   </head>
-  <body class=" font-[Nunito] h-screen bg-white text-slate-900 dark:bg-black dark:text-white">
-    <div class="fixed left-4 top-4">
-      <img
-        class="h-12 w-12 rounded-xl object-cover"
-        src="/dist/facicon.jpg"
-        alt="TBC Zhao"
-      />
-      <div
-        class="absolute inset-0 rounded-xl ring-1 ring-inset ring-black/20 dark:ring-white/80"
-      ></div>
-    </div>
-
-    <div class="flex h-full items-center justify-center">
-      <p class="p-4 text-lg">Coming soon...</p>
+  <body
+    class="h-screen bg-white font-[Nunito] text-slate-900 dark:bg-black dark:text-white antialiased"
+  >
+    <div class="flex h-full flex-col items-center justify-center space-y-4">
+      <div class="relative">
+        <img
+          class="h-12 w-12 rounded-xl object-cover"
+          src="/dist/facicon.jpg"
+          alt="TBC Zhao"
+        />
+        <div
+          class="absolute inset-0 rounded-xl ring-1 ring-inset ring-black/20 dark:ring-white/80"
+        ></div>
+      </div>
+      <div class="text-lg">Coming Soon</div>
     </div>
   </body>
 </html>
